tests/baselines/reference/interMixingModulesInterfaces4.errors.txt
interMixingModulesInterfaces4.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
interMixingModulesInterfaces4.ts(3,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== interMixingModulesInterfaces4.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        export module B {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export function createB(): number {
                return null;
            }
        }
    
        interface B {
            name: string;
            value: number;
        }
    }
    
    var x : number = A.B.createB();